chunked addition using vectors